@@ -1,6 +1,12 @@
 package client.pageStorage;
 
 import client.pages.State;
+import client.pages.other.Login;
+import client.singletons.StateManager;
+import com.badlogic.gdx.utils.reflect.ClassReflection;
+import com.badlogic.gdx.utils.reflect.ReflectionException;
+
+import java.lang.reflect.InvocationTargetException;
 
 /**
  * This is the enum storing all possible page states across all the pages.
@@ -15,59 +21,54 @@ public enum Pages {
      */
 
     FRIENDS1("friends.Friends1"),
-    FRIENDS2("friends.Friends2"),
-    FRIENDS3("friends.Friends3"),
     FRIENDS4("friends.Friends4"),
-    HOME1("home.Home1"),
-    HOME2("home.Home2"),
-    HOME3("home.Home3"),
-    HOME4("home.Home4"),
-    NOWPLAYING("miscellaneous.NowPlaying"),
-    PROFILE("miscellaneous.Profile"),
+    HOME("home.Home"),
+    ARTIST("home.Artist"),
+    DISCOVERY("home.Discovery"),
+    TOPSINGLES("home.TopSingles"),
+    MYPROFILE("other.MyProfile"),
+    LOGIN("other.Login"),
     DIARY1("musicDiary.Diary1"),
-    DIARY2("musicDiary.Diary2"),
-    DIARY3("musicDiary.Diary3"),
-    ;
-
-    /**
-     * This attribute denotes the current className of the given enum
-     */
-    private final String CLASS_NAME;
+    DIARY2("musicDiary.Diary2");
 
 
     /**
      * This variable stores the given state Reference to the classname.
      */
-    private State state_reference;
+    private State stateReference;
 
+    private String name;
 
-
-    Pages(String class_name){
-        String preamble = "client.pages.";
-        CLASS_NAME = preamble + class_name;
-
-        initializeState();
-
+    Pages(String state){
+      name = state;
     }
 
-    /**
-     * This method will initialize a state reference from the given name.
-     *
-     */
-    private void initializeState(){
+    public static void initLogin(){
+        Pages page = LOGIN;
         try {
-            state_reference = (State) Class.forName(CLASS_NAME).newInstance();
-        } catch (InstantiationException | IllegalAccessException | ClassNotFoundException e) {
+            page.stateReference = (State) ClassReflection.forName("client.pages." + page.name).getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException | ReflectionException e) {
             e.printStackTrace();
         }
-
-        state_reference.init();
     }
 
-    @Override
-    public String toString(){
-        return CLASS_NAME;
+    public static void initClass(){
+
+        for (Pages page : Pages.values()){
+
+            if (page != null && page != Pages.LOGIN ) {
+                try {
+                    page.stateReference = (State) ClassReflection.forName("client.pages." + page.name).getDeclaredConstructor().newInstance();
+                } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException | ReflectionException e) {
+                    e.printStackTrace();
+                }
+            }
+        }
     }
+
+
+
+
 
     /**
      * This method returns the given state reference
@@ -76,6 +77,11 @@ public enum Pages {
      *
      */
     public State getStateReference() {
-        return this.state_reference;
+        return this.stateReference;
     }
+
+    public String toString(){
+        return name;
+    }
+
 }
